change some functionality and seo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Dainwi",
-  "name": "Dainwi Choudhary - Full Stack Developer",
+  "name": "Dainwi Choudhary | Full Stack Developer",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,16 +10,21 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#4F46E5",
-  "background_color": "#ffffff"
+  "theme_color": "#4f46e5",
+  "background_color": "#0f172a",
+  "description": "Full Stack Developer specializing in MERN stack and modern web technologies",
+  "orientation": "portrait",
+  "prefer_related_applications": false
 }
