--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,20 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# editor
+.vscode
+.idea
+
+# cache
+.cache
+.eslintcache
+
+# optimized images
+public/images/optimized
