--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run generate-sitemap || exit 0",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate-sitemap": "node src/utils/generateSitemap.js",
+    "generate-sitemap": "node src/utils/generateSitemap.js || exit 0",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx}\" --fix || true",
